change from registry to image downcase

--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -17,9 +17,9 @@ jobs:
       packages: write
 
     steps:
-      - name: downcase registry
+      - name: downcase iamge name
         run: |
-          echo "REPO=${REGISTRY,,}" >>${GITHUB_ENV}
+          echo "IMAGE=${IMAGE_NAME,,}" >>${GITHUB_ENV}
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
@@ -30,4 +30,4 @@ jobs:
           script: | 
             docker stop portfolio -t 3
             docker rm portfolio
-            docker run --name portfolio -p 63000:3000 ${{ env.REPO }}/${{ env.IMAGE_NAME }}
+            docker run --name portfolio -p 63000:3000 ${{ env.REGISTRY }}/${{ env.IMAGE }}
