--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -30,5 +30,5 @@ jobs:
           script: | 
             docker stop portfolio -t 3
             docker rm portfolio
-            docker pull ${{ env.REGISTRY }}/${{ env.IMAGE }}
-            docker run -d --name portfolio -p 63000:3000 ${{ env.REGISTRY }}/${{ env.IMAGE }}
+            docker pull ${{ env.REGISTRY }}/${{ env.IMAGE }}:main
+            docker run -d --name portfolio -p 63000:3000 ${{ env.REGISTRY }}/${{ env.IMAGE }}:main
